; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-ext/extr_test-ext-handle-scope-root.c_test_handle_scope_val.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-ext/extr_test-ext-handle-scope-root.c_test_handle_scope_val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@reusing_times = common dso_local global i32 0, align 4
@JERRY_GC_PRESSURE_LOW = common dso_local global i32 0, align 4
@native_free_cb_call_count = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_handle_scope_val to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_handle_scope_val() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 (...) @jerryx_handle_scope_get_root()
  store i32 %4, i32* %1, align 4
  store i32 0, i32* %2, align 4
  br label %5

5:                                                ; preds = %23, %0
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @reusing_times, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %26

9:                                                ; preds = %5
  %10 = call i32 (...) @create_object()
  %11 = call i32 @jerryx_create_handle(i32 %10)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* %1, align 4
  %14 = call i32 @jerryx_close_handle_scope(i32 %13)
  %15 = load i32, i32* @JERRY_GC_PRESSURE_LOW, align 4
  %16 = call i32 @jerry_gc(i32 %15)
  %17 = load i32, i32* @native_free_cb_call_count, align 4
  %18 = load i32, i32* %2, align 4
  %19 = add nsw i32 %18, 1
  %20 = icmp eq i32 %17, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @TEST_ASSERT(i32 %21)
  br label %23

23:                                               ; preds = %9
  %24 = load i32, i32* %2, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %2, align 4
  br label %5

26:                                               ; preds = %5
  ret void
}

declare dso_local i32 @jerryx_handle_scope_get_root(...) #1

declare dso_local i32 @jerryx_create_handle(i32) #1

declare dso_local i32 @create_object(...) #1

declare dso_local i32 @jerryx_close_handle_scope(i32) #1

declare dso_local i32 @jerry_gc(i32) #1

declare dso_local i32 @TEST_ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
